add head button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+<header data-role="header">
+  <h1>ヘッダ</h1>
+  <a href="#" class="ui-btn-right">右</a>
+</header>
 <div class="app">
   <div class="app-header">
     <h1>Welcome to Amplify</h1>
