--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header data-role="header">
   <h1>ヘッダ</h1>
-  <a href="#" class="ui-btn-right">右</a>
+  <a href="/Users/aibuki-t/develop/amplify-53/gitapp/index.html" class="ui-btn-right">右</a>
 </header>
 <div class="app">
   <div class="app-header">
