--- a/graph.html
+++ b/graph.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
-    <div>hello</div>
+    <header data-role="header">
+        <h1>ヘッダ</h1>
+        <a href="../index.html" class="ui-btn-right">右</a>
+    </header>
+    <h1>hello</h1>
+    
 
 </body>
