--- a/graph.html
+++ b/graph.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
-    <header data-role="header">
-        <h1>ヘッダ</h1>
-        <a href="../index.html" class="ui-btn-right">右</a>
-    </header>
-    <h1>hello</h1>
-    
+  <header data-role="header">
+    <h1>ヘッダ</h1>
+    <a href="../index.html" class="ui-btn-right">右</a>
+  </header>
+  <h1>Hello</h1>
+  <P>takezaki</P>
+  
+  <!-- ここに追加のコンテンツを記述する -->
 
 </body>
 </html>
