--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 <header data-role="header">
-  <h1>ヘッダ</h1>
+  <!-- <h1>ヘッダ</h1>
   <a href="../graph.html" class="ui-btn-right">右</a>
-</header>
+</header> -->
 <div class="app">
   <div class="app-header">
     <h1>Welcome to Amplify</h1>
