--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <div class="app-body">
     <h1>Mutation Results</h1>
     <button id="MutationEventButton">Add data</button>
+    <button id="PrintDataEvent">print data </button>
+    <div id="DataResult"></div>
     <div id="MutationResult"></div>
     <hr />
 
