--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Welcome to Amplify</h1>
   </div>
   <div class="app-body">
-    <canvas id="graph-area" height="450" width="600">
+    <!-- <canvas id="graph-area" height="450" width="600">
       <script type="text/javascript">
 
         // ▼グラフの中身
@@ -63,7 +63,7 @@
         };
      
      </script>
-    </canvas>
+    </canvas> -->
     <h1>Mutation Results</h1>
     <button id="MutationEventButton">Add data</button>
     <button id="PrintDataEvent">print data </button>
