add contororler main.js

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
     <h1>Mutation Results</h1>
     <button id="MutationEventButton">Add data</button>
     <button id="PrintDataEvent">print data </button>
-    <div id="DataResult"></div>
+    <div id="DataResult">
+      <canvas id="graph-area" height="450" width="600">
+
+      </canvas>
+    </div>
     <div id="MutationResult"></div>
     <hr />
 
