--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h1>Welcome to Amplify</h1>
   </div>
   <div class="app-body">
-    <!-- <canvas id="graph-area" height="450" width="600">
+    <h1>Bisualize</h1>
+    <canvas id="graph-area" height="450" width="600">
       <script type="text/javascript">
 
         // ▼グラフの中身
@@ -63,11 +64,12 @@
         };
      
      </script>
-    </canvas> -->
+    </canvas>
+    <hr />
     <h1>Mutation Results</h1>
     <button id="MutationEventButton">Add data</button>
     <button id="PrintDataEvent">print data </button>
-    <canvas id="graph-area" height="450" width="600">
+    <!-- <canvas id="graph-area" height="450" width="600">
       <script type="text/javascript">
 
         document.getElementById('PrintDataEvent').addEventListener('click', () => {
@@ -116,7 +118,7 @@
        
        </script>
 
-    </canvas>
+    </canvas> -->
     <div id="MutationResult"></div>
     <hr />
 
