--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div class="app-body">
     <h1>Bisualize</h1>
     <canvas id="graph-area" height="450" width="600">
-      <script type="text/javascript">
+      <!-- <script type="text/javascript"> -->
 
-        // ▼グラフの中身
+        <!-- // ▼グラフの中身
         var pieData = [
            {
               value: 240,            // 値
@@ -61,9 +61,9 @@
         window.onload = function(){
            var ctx = document.getElementById("graph-area").getContext("2d");
            window.myPie = new Chart(ctx).Pie(pieData);
-        };
+        }; -->
      
-     </script>
+     <!-- </script> -->
     </canvas>
     <hr />
     <h1>Mutation Results</h1>
