--- a/index.html
+++ b/index.html
@@ -20,7 +20,48 @@
   <div class="app-body">
     <h1>Bisualize</h1>
     <canvas id="graph-area" height="450" width="600">
-      <script type="text/javascript" src="graph.js"></script>
+      <!-- <script type="text/javascript" src="graph.js"> -->
+      <script type="text/javascript">
+        var pieData = [
+          {
+              value: 100,            // 値
+              color:"#F7464A",       // 色
+              highlight: "#FF5A5E",  // マウスが載った際の色
+              label: "りんご"        // ラベル
+          },
+          {
+              value: 100,
+              color: "#41C44E",
+              highlight: "#6CD173",
+              label: "メロン"
+          },
+          {
+              value: 100,
+              color: "#FDB45C",
+              highlight: "#FFC870",
+              label: "みかん"
+          },
+          {
+              value: 100,
+              color: "#AA49B8",
+              highlight: "#C583CF",
+              label: "ぶどう"
+          },
+          {
+              value: 30,
+              color: "#4D5360",
+              highlight: "#616774",
+              label: "その他"
+          }
+
+        ];
+
+        // ▼上記のグラフを描画するための記述
+        window.onload = function () {
+          var ctx = document.getElementById("graph-area").getContext("2d");
+          window.myPie = new Chart(ctx).Pie(pieData);
+        };
+      </script>
     </canvas>
     <hr />
     <h1>Mutation Results</h1>
