--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="app-body">
     <h1>Bisualize</h1>
     <canvas id="graph-area" height="450" width="600">
-      <script type="text/javascript" language=”JavaScript” src="./graph.js">
+      <script src="./graph.js">
       // <script type="text/javascript">
       //   var pieData = [
       //     {
