--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <h1>Welcome to Amplify</h1>
   </div>
   <div class="app-body">
-    <h1>Bisualize</h1>
+    <h1>Visualize</h1>
     <canvas id="graph-area" height="450" width="600">
       <!-- <script src="./graph.js"> -->
-      <script type="text/javascript" src="./main.js">
+      <script type="text/javascript">
         var pieData = [
           {
               value: 100,            // 値
