--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Visualize</h1>
     <canvas id="graph-area" height="450" width="600">
       <!-- <script src="./graph.js"> -->
-      <script type="text/javascript">
+      <script type="text/javascript" src="./graph.js">
         var pieData = [
           {
               value: 100,            // 値
