--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           }
 
         ];
-        console.log(pieData[0][value]);
+        // console.log(pieData[0][value]);
 
         // ▼上記のグラフを描画するための記述
         window.onload = function () {
