--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           var ctx = document.getElementById("graph-area").getContext("2d");
           window.myPie = new Chart(ctx).Pie(pieData);
         }; 
-        alert("Hello")
+        // alert("Hello")
       </script>
     </canvas>
     <hr />
