--- a/index.html
+++ b/index.html
@@ -20,49 +20,49 @@
   <div class="app-body">
     <h1>Visualize</h1>
     <canvas id="graph-area" height="450" width="600">
-      <!-- <script src="./graph.js"> -->
-      <script type="text/javascript" >
-        var pieData = [
-          {
-              value: 100,            // 値
-              color:"#F7464A",       // 色
-              highlight: "#FF5A5E",  // マウスが載った際の色
-              label: "りんご"        // ラベル
-          },
-          {
-              value: 100,
-              color: "#41C44E",
-              highlight: "#6CD173",
-              label: "メロン"
-          },
-          {
-              value: 100,
-              color: "#FDB45C",
-              highlight: "#FFC870",
-              label: "みかん"
-          },
-          {
-              value: 100,
-              color: "#AA49B8",
-              highlight: "#C583CF",
-              label: "ぶどう"
-          },
-          {
-              value: 30,
-              color: "#4D5360",
-              highlight: "#616774",
-              label: "その他"
-          }
+      <script src="./graph.js">
+      // <script type="text/javascript" >
+        // var pieData = [
+        //   {
+        //       value: 100,            // 値
+        //       color:"#F7464A",       // 色
+        //       highlight: "#FF5A5E",  // マウスが載った際の色
+        //       label: "りんご"        // ラベル
+        //   },
+        //   {
+        //       value: 100,
+        //       color: "#41C44E",
+        //       highlight: "#6CD173",
+        //       label: "メロン"
+        //   },
+        //   {
+        //       value: 100,
+        //       color: "#FDB45C",
+        //       highlight: "#FFC870",
+        //       label: "みかん"
+        //   },
+        //   {
+        //       value: 100,
+        //       color: "#AA49B8",
+        //       highlight: "#C583CF",
+        //       label: "ぶどう"
+        //   },
+        //   {
+        //       value: 30,
+        //       color: "#4D5360",
+        //       highlight: "#616774",
+        //       label: "その他"
+        //   }
 
-        ];
-        // console.log(pieData[0][value]);
+        // ];
+        // // console.log(pieData[0][value]);
 
-        // ▼上記のグラフを描画するための記述
-        window.onload = function () {
-          var ctx = document.getElementById("graph-area").getContext("2d");
-          window.myPie = new Chart(ctx).Pie(pieData);
-        }; 
-        // alert("Hello")
+        // // ▼上記のグラフを描画するための記述
+        // window.onload = function () {
+        //   var ctx = document.getElementById("graph-area").getContext("2d");
+        //   window.myPie = new Chart(ctx).Pie(pieData);
+        // }; 
+        // // alert("Hello")
       </script>
     </canvas>
     <hr />
