--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header data-role="header">
   <h1>ヘッダ</h1>
-  <a href="gitapp/graph.html" class="ui-btn-right">右</a>
+  <a href="./graph.html" class="ui-btn-right">右</a>
 </header>
 <div class="app">
   <div class="app-header">
